--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Meu Site</title>
+    <title>Site Principal</title>
   </head>
   <body>
     <h1>[Página Principal]</h1>
